7.0.0
  - Static library for Linux has been updated to libv8 12.4.254.21 (node-22)
  - Static library for MacOS arm64 updated to libv8 13.6.233.10 (node-24)
  - We now support arm64 and amd64 static libs for all platforms.

6.0.6
  - Update to wasm-feature-detect@1.8.0
  - ctx$call() gains argument simplify which is passed to fromJSON()
  - ctx$eval('null', TRUE) now returns "null" instead of NULL

6.0.5
  - Remove -DV8_ENABLE_CHECKS from standard build flags because it causes
    problems with node24 on Fedora (#190)
  - Add scope to start_v8_isolate() for libv8 v14 and up (#189)

6.0.4
  - Enable wasm-reftypes on libv8 v8.5 - v9.9 which was opt-in back then. This
    feature is needed for rust compiled wasm.

6.0.3
  - Explicitly include <fstream> in bindings as required by latest libv8

6.0.2
  - Windows: minor update of libv8 to fix a warning with rtools45

6.0.1
  - Fix build for legacy libv8 versions on CondaForge and Centos-7

6.0.0
  - Experimental support for dynamic ES modules
  - Linux: update static libv8 to version 11.9

5.0.1
  - Remove some test verbosity per CRAN request
  - Update maintainer email address

5.0.0
  - Drop support for legacy v8-314 library bindings
  - Compile with C++20 when available (required as of libv8 version 12.7)
  - Experimental @ accessor for v8 objects in R >= 4.3.0
  - Fix 'anchored' links for CRAN

4.4.2
  - Prevent Fedora from accidentally building against the legacy v8-314 library
    instead of the current v8-devel on that system.
  - Remove bundled underscore.js and examples

4.4.1
  - Fix a printf warning for CRAN

4.4.0
  - Windows (R-4.3 and up): update libv8 to 11.8.172.13 + arm64 support.

4.3.4
  - MacOS: update libv8 to 11.5
  - Windows (R-4.3 and up): update libv8 to 11.8
  - Update wasm_features() detection with new wasm features

4.3.3
  - Fix yet more version comparisons

4.3.2
  - Fix another version comparison issue

4.3.1
 - Fix getRversion() type requested by CRAN

4.3.0
 - MacOS: update libv8 to 11.2